# PathTracer

./: .gitignore  CMakeLists.txt  LICENSE  Meeting-notes.md  README.md  build.py
demo/: render.jl  types.jl  util.jl
example-scenes/: objectScene.yaml
libs/libomp/lib/: libomp.dylib
libs/yaml-cpp-master/buildlib/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake  yaml-cpp-config.cmake
libs/yaml-cpp-master/buildlib/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse  read  sandbox
scenes/: bigBalls.yaml  glassBalls.yaml  mirrorRoom.yaml
src/: FileLoader.hpp  Makefile  ball.hpp  box.hpp  button.hpp  bvh.hpp  environment.hpp  fileloader.hpp  fileloader_ex.hpp  gui.hpp  gui_ex.hpp  hello.cpp  interface.hpp  main.cpp  material.hpp  message.cpp  message.h  object.hpp  randomgenerator.hpp  rectangle.hpp  renderer.hpp  room.yaml  scene.hpp  scene.yaml  scene2.yaml  textbox.hpp  triangle.hpp  trianglemesh.hpp  types.hpp
src/interface/: button.hpp  gui.hpp  gui_ex.hpp  interface.hpp
src/objects/: ball.hpp  box.hpp  bvh.hpp  trianglemesh.hpp
src/scenery/: environment.hpp  material.hpp  scene.hpp
src/scenes/: bigBalls.yaml  big_balls.yaml  glassBalls.yaml  glassBalls2.yaml  legacyBalls.yaml  mirrorRoom.yaml  objectScene.yaml  room.yaml  scene.yaml  scene2.yaml  test.yaml  test2.yaml
src/utils/: randomgenerator.hpp  types.hpp
tests/: AllTests.cc  ball_test.hpp  bvh_test.hpp  environment_test.hpp  fileloader_test.hpp  interface_test.hpp  triangle_test.hpp
tests/yaml_testfiles/: correctloadscene.yaml  expect_invalid_key1.yaml  expect_invalid_key2.yaml  invalid_focus.yaml  invalid_fow.yaml  invalid_material_type.yaml  invalid_size_vector.yaml  negative_radius.yaml  no_material.yaml  no_radius.yaml
